infra/platform/portal/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-portal
  namespace: portal
spec:
  selector:
    app.kubernetes.io/name: public-portal
  ports:
    - name: http
      port: 80
      targetPort: http
