infra/platform/portal/portal-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: public-portal
  namespace: portal
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: public-portal
          port: 80
